Played around with code to fix a weird left/right scrolling bug/issue when adding new portfolio sections by adding overflow-x hidden to html and body in portfolio.html and now its gone

--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -1,3 +1,9 @@
+html,
+body {
+  //fixes the weird left right scroll bar when adding more portfolio sections
+  overflow-x: hidden;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -90,4 +96,39 @@ main {
       border: solid 2px #e016b4;
     }
   }
+}
+
+// .uidesign-portfolio-card {
+//   background-color: white;
+//   // outline: white 7px solid;
+//   margin: 2rem;
+//   width: 23rem;
+//   h2 {
+//     font-weight: 500;
+//     color: #111111;
+//   }
+//   p {
+//     color: #111111;
+//     // span {
+//     //   color: #505050;
+//     // }
+//   }
+//   img {
+//     height: 12rem;
+//     width: 22rem;
+//     transition: all 0.4s ease-in-out;
+//   }
+//   img:hover {
+//     cursor: pointer;
+//     transform: scale(1.03);
+//   }
+// }
+
+// .uidesign-portfolio-card {
+// }
+
+.ui-img {
+  height: auto;
+  width: 2rem;
+  transition: all 0.4s ease-in-out;
 }
